Version 1.13.6+dev:
 * Graphics:
   * Improved terrain graphics: lava.
 * Language and i18n:
   * Updated translations: British English, Portuguese (Brazil)
 * WML Engine:
   * Removed LOW_MEM option when building.
   * Add color= attribute to [floating_text]

Version 1.13.6:
 * AI:
   * Added new high_xp_attack candidate action to default AI. This CA performs
     attacks on enemy units so close to leveling that the default AI's combat CA
     would not attack them.
   * New Micro AI: Assassin Squad AI
   * Fix bug #23720, AI units with max_moves=0 do not attack.
   * Fix bug #22179: [disable] weapon special is ignored by AI. A second
     instance of the AI also ignoring this special under different circumstances
     has also been fixed.
   * Fix bug of Experimental AI recruiting sometimes failing under shroud
   * Fix some mainline campaigns custom AIs not working due to syntax changes
     after the AI refactoring for Wesnoth 1.13.5 (e.g. bug #25123)
   * Significantly improve move times for AI sides with many guardians
   * Micro AIs, other Lua AIs and ai_helper.lua utility functions:
     * Correctly and consistently deal with invisible units
     * New ai_helper functions get_attackable_enemies, get_visible_units,
       is_attackable_enemy, is_incomplete_move, is_incomplete_or_empty_move,
       is_visible_unit and robust_move_and_attack
     * Renamed function ai_helper.to_triple to LS_to_triples for consistency
       with other functions
     * Some internal changes to fix rarely occurring bugs and to improve
       robustness and speed
 * Campaigns:
   * Eastern Invasion:
     * Fixed broken village encounters.
     * Tweaked the balance of Scenario 2.
   * Heir to the Throne:
     * Reworked the map and added new AI behavior in 'The Princess of Wesnoth'.
   * Delfador's Memoirs:
     * S9: Resolved inability to end level even when Delfador has the Staff
       (bug #24951)
     * S17: Resolved Wesnoth units returning to recall list not being healed