@@ -3,6 +3,9 @@ Version 1.13.6+dev:
    * Improved terrain graphics: lava.
  * Language and i18n:
    * Updated translations: British English, Portuguese (Brazil)
+ * Lua API:
+   * New attributes in side proxy:
+     num_units, num_villages, total_upkeep, expenses, net_income
  * WML Engine:
    * Removed LOW_MEM option when building.
    * Add color= attribute to [floating_text]
